tests/negative/_cycle_back.orb
// TODO! codegenAll looks at the first child and passes to the appropriate codegen
// TODO! check there are no types where there shouldn't be (don't forget codegenAll)

// TODO! replace errorUnknown with actual error messages
// TODO! remove obsolete compiler messages
import "tests/negative/test_import_cycle.orb";
